made infinite scroll fixed image on mobile for better performance

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -115,17 +115,17 @@ button.navbar-toggler {
 
   .background-image-x {
     background: url("../../static/Untitled-1.jpg") repeat-x;
-    height: 100%;
-    width: 600%;
-    animation: slide 120s linear infinite;
+    // height: 100%;
+    // width: 600%;
+    // animation: slide 120s linear infinite;
 
-    // object-fit: cover;
-    // min-width: 100%;
-    // min-height: 100%;
-    // height: 110%;
-    // position: fixed;
-    // bottom: -10%;
-    // right: 0;
+    object-fit: cover;
+    min-width: 100%;
+    min-height: 100%;
+    height: 110%;
+    position: fixed;
+    bottom: -10%;
+    right: 0;
     z-index: -3;
   }
 }
@@ -182,8 +182,8 @@ button.navbar-toggler {
   .background-image {
     background: url("../../static/Untitled-2.jpg") repeat-x;
     height: 100%;
-    width: 600%;
-    animation: slide 120s linear infinite;
+    width: 100%;
+    // animation: slide 120s linear infinite;
     position: fixed;
     top: 13%;
     bottom: -10%;
